fix gap issue

--- a/chatbot/src/app/components/Qanswers/Qanswers.module.scss
+++ b/chatbot/src/app/components/Qanswers/Qanswers.module.scss
@@ -1,11 +1,10 @@
 .container {
     font-family: 'Orbitron', sans-serif;
-    // max-width: 630px;
     width: 100%;
+    max-width: 630px;
     display: flex;
     flex-direction: column;
     gap: 10px;
-    // background-color: red;
     min-height: 110px;
 }
 
@@ -14,16 +13,16 @@
     background-repeat: no-repeat;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    // background-color: red;
+
 }
 
 .questionDetals {
     display: flex;
-    // align-items: center;
+    align-items: flex-start;
     gap: 10px;
     font-weight: 700;
     font-size: 24px;
-
+    width: fit-content;
 }
 
 .number {
@@ -34,6 +33,7 @@
     background-repeat: no-repeat;
     background-clip: text;
     -webkit-text-fill-color: transparent;
+
 }
 
 .corner {
